fixed scrollbar colors

--- a/src/components/Browse/Card.scss
+++ b/src/components/Browse/Card.scss
@@ -105,7 +105,7 @@
 
 .share-list-container {
     position: absolute;
-    height: 14rem;
+    height: 11rem;
     width: 16rem;
     right: -13rem;
     top: 0rem;
